# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md
res/: fragment.glsl  vertex.glsl
res/shaders/: Basic.glsl  Basic2.glsl  fragment.glsl  vertex.glsl
res/shaders/crosshair/: fragment.glsl  vertex.glsl
res/shaders/debug/bounding_box/: vertex.glsl
res/shaders/entity/: fragment.glsl  vertex.glsl
res/shaders/skybox/: fragment.glsl  vertex.glsl
src/: Action.h  Context.h  GameContext.h  GuiContext.h  Input.h  Matter.h  Physics.h  Renderer.h  Run.cpp  Window.h  WindowContext.h  input.hpp  matter.hpp  physics.hpp  run.cpp  window.hpp
src/graphics/: Graphics.cpp  Graphics.hpp
src/graphics/buffer/: VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/graphics/models/cube/: Cube.cpp  Cube.hpp  cube.cpp  cube.hpp
src/graphics/models/debug/: BoundingBox.cpp  BoundingBox.hpp
src/graphics/models/entity/pig/: Pig.cpp  Pig.hpp
src/graphics/models/skybox/: Skybox.cpp  Skybox.hpp
src/graphics/models/ui/: Crosshair.cpp  Crosshair.hpp
src/graphics/render/: render.cpp  render.hpp
src/graphics/shader/: Shader.cpp  Shader.hpp  shader.cpp  shader.hpp
src/graphics/texture/: Texture.cpp  Texture.hpp  texture.cpp  texture.hpp
src/gui/: Gui.cpp  Gui.hpp  Screen.hpp  gui.cpp  gui.hpp
src/gui/screens/: DebugScreen.cpp  DebugScreen.hpp  debug.cpp  debug.hpp
src/input/: Input.cpp  Input.hpp  input.hpp
src/math/: math.hpp  timer.hpp
src/matter/: matter.hpp
src/physics/: Physics.cpp  Physics.hpp  physics.hpp
src/physics/collision/: Collision.cpp  Collision.hpp
src/physics/entity/: Pig.cpp  Pig.hpp
src/render/models/: cube.hpp
src/renderer/: Draw.h  Renderer.h
src/renderer/buffers/: IndexBuffer.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/renderer/chunk/: Chunk.h
src/renderer/models/: Cube.h
src/renderer/shaders/: Shader.h
src/renderer/textures/: Texture.h
src/renderer/transform/: Transform.h
src/storage/: game_state.hpp  input_state.hpp  render_state.hpp  user_state.hpp
src/util/math/: Math.cpp  Math.hpp
src/window/: Window.cpp  Window.hpp  window.cpp  window.hpp
src/window/graphics/: shader.hpp
src/world/: WorldState.cpp  WorldState.hpp
src/world/chunk/: Chunk.cpp  Chunk.hpp  ChunkLoader.cpp  ChunkLoader.hpp  chunk.hpp
src2/: ChunkData.h  DrawChunk.h
